syntax = "proto3";

package auth;

option go_package = "github.com/example/auth/api";

service Auth {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Refresh(RefreshRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
}

message SignUpResponse {
    int64 id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access = 1;
    string refresh = 2;
}

message RefreshRequest {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    string status = 1;
}
